filling out forms

--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -2,7 +2,7 @@
   <a href='/dashboard'></a>
   <h2 class='title'>Create New Post</h2>
 
-  <form class='form'>
+  <form class='form new-post'>
     <div>
       <label for='post-title'>Title:</label>
       <input
